production/manifests/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hira-chan-nginx
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: hira-chan-nginx
